--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,10 +1,6 @@
-<div class="d-flex align-items-center justify-content-center">
-  <h1>Sign Up</h1>
-</div>
-  
-<br/>
+<h1>Reset Your Password</h1>
 
-<%= form_with model: @user, url: sign_up_path do |form| %> 
+<%= form_with model: @user, url: password_reset_edit_path(token: params[:token]) do |form| %>
   <% if form.object.errors.any? %>
     <div class="mb-3">
       <div class="alert alert-danger">
@@ -14,13 +10,10 @@
       </div>
     </div>
   <% end %>
-
+  
   <div class="mb-3">
-    <%= form.label :email %>
-    <%= form.text_field :email, class: "form-control", placeholder: "ojej@wp.pl" %>
+    <%= form.submit "Reset Password", class: "btn btn-primary" %>
   </div>
-
-  <br/>
 
   <div class="mb-3">
     <%= form.label :password %>
@@ -33,12 +26,4 @@
     <%= form.label :password_confirmation %>
     <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Password" %>
   </div>
-
-  <div class="mb-3">
-    <%= form.submit "Sign Up", class: "btn btn-primary" %>
-  </div>
 <% end %>
- 
-
-
-
