--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -2,10 +2,10 @@
   <div class="alert alert-info mt-4" role="alert">
     <%= flash[:notice] %>
   </div>
-<% end %>    
+<% end %>
 
-<% if flash[:notice] %>
-  <div class="alert alert-warning mt-4" role="alert">
+<% if flash[:alert] %>
+  <div class="alert alert-danger mt-4" role="alert">
     <%= flash[:alert] %>
   </div>
-<% end %>  
+<% end %>
